--- a/Build_a_Survey_Form.css
+++ b/Build_a_Survey_Form.css
@@ -17,3 +17,12 @@ h1 {
 p {
 	padding-top: 30px;
 }
+
+.labels {
+	display: inline-block;
+	text-align: right;
+	width: 40%;
+	padding: 5px;
+	vertical-align: top;
+	margin-top: 10px;
+}
