Property to "right-tab" class

--- a/Build_a_Survey_Form.css
+++ b/Build_a_Survey_Form.css
@@ -26,3 +26,10 @@ p {
 	vertical-align: top;
 	margin-top: 10px;
 }
+
+.right-tab {
+	display: inline-block;
+	text-align: left;
+	width: 48%;
+	vertical-align: middle;
+}
