Property to "input-field" class

--- a/Build_a_Survey_Form.css
+++ b/Build_a_Survey_Form.css
@@ -33,3 +33,12 @@ p {
 	width: 48%;
 	vertical-align: middle;
 }
+
+.input-field {
+	height: 20px;
+	width: 280px;
+	padding: 5px;
+	margin: 10px;
+	border: 1px solid #c0c0c0;
+	border-radius: 2px;
+}
