Property to "#dropdown" id

--- a/Build_a_Survey_Form.css
+++ b/Build_a_Survey_Form.css
@@ -52,3 +52,12 @@ p {
 	border-radius: 2px;
 }
 
+#dropdown {
+	height: 35px;
+	width: 140px;
+	padding: 5px;
+	margin: 10px;
+	margin-top: 15px;
+	border: 1px solid #c0c0c0;
+	border-radius: 2px;
+}
