--- a/Build_a_Survey_Form.css
+++ b/Build_a_Survey_Form.css
@@ -65,3 +65,13 @@ p {
 ul {
 	list-style-type:none;
 }
+
+button {
+	background-color: #b2d5d1;
+	width: 100px;
+	height: 40px;
+	font-size: 16px;
+	font-weight:bold;
+	margin-top: 20px;
+	margin-bottom:30px;
+}
