Add media querie for <input> of <form>

--- a/Build_a_Survey_Form.css
+++ b/Build_a_Survey_Form.css
@@ -75,3 +75,10 @@ button {
 	margin-top: 20px;
 	margin-bottom:30px;
 }
+
+@media screen and (max-width: 800px){
+	.input-field,
+	.message{
+		width: 150px;
+	}  
+}
